# MoveTheBox

./: .editorconfig  .gitignore  CMakeLists.txt  TODO.md
include/: CApp.h  CApp.hpp  CDraw.h  CDraw.hpp
include/Game/: Box.hpp  Coordinate.hpp  Entity.hpp  ICell.hpp  Player.hpp  Road.hpp
sources/: main.cpp
sources/CApp/: CApp.cpp  CApp_OnCleanup.cpp  CApp_OnEvent.cpp  CApp_OnInit.cpp  CApp_OnLoop.cpp  CApp_OnRender.cpp
sources/CDraw/: CDraw_DrawCircle.cpp  CDraw_DrawGrid.cpp  CDraw_DrawLine.cpp  CDraw_DrawNStar.cpp  CDraw_GetAllPointsBrezenham.cpp
sources/Game/: Box.cpp  Coordinate.cpp  Player.cpp  Road.cpp
tests/: TestBox.cpp  TestPlayer.cpp  TestRoad.cpp
